--- a/package.json
+++ b/package.json
@@ -4,8 +4,26 @@
   "description": "chatapp using websocket",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon -w src --exec \"babel-node src --presets env,stage-0\"",
+    "build": "babel src -s -D -d dist --presets env,stage-0",
+    "start": "node dist",
+    "prestart": "npm run -s build",
+    "test": "eslint src"
   },
+  "eslintConfig": {
+    "extends": "eslint:recommended",
+    "parserOptions": {
+      "ecmaVersion": 7,
+      "sourceType": "module"
+    },
+    "env": {
+      "node": true
+    },
+    "rules": {
+      "no-console": 0,
+      "no-unused-vars": 1
+    }
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/vidulkumar/chatapp.git"
@@ -15,5 +33,19 @@
   "bugs": {
     "url": "https://github.com/vidulkumar/chatapp/issues"
   },
-  "homepage": "https://github.com/vidulkumar/chatapp#readme"
+  "homepage": "https://github.com/vidulkumar/chatapp#readme",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
+    "morgan": "^1.9.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^4.9.0",
+    "nodemon": "^1.12.1"
+}
 }
